--- a/nextjs/components/Message/Link/Video/index.module.css
+++ b/nextjs/components/Message/Link/Video/index.module.css
@@ -1,3 +1,8 @@
+.video {
+  max-width: 100%;
+  overflow: hidden;
+}
+
 .iframe {
   max-height: 360px;
   max-width: 640px;
