--- a/nextjs/components/Toggle/index.module.css
+++ b/nextjs/components/Toggle/index.module.css
@@ -2,6 +2,7 @@
   color: #36454f;
   font-size: 14px;
   margin-bottom: 4px;
+  line-break: anywhere;
 }
 
 .arrow {
